--- a/about.html
+++ b/about.html
@@ -2,230 +2,271 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Me | Better Ways of Working</title>
-  <link rel="stylesheet" href="./styles.css" />
   <style>
-    /* Page-specific layout tweaks for About page */
+    /* Better Ways of Working Stylesheet - Unified with Homepage */
+    :root {
+      --bg: #0b0f14;
+      --surface: #111820;
+      --card: #151e28;
+      --text: #e8eef5;
+      --muted: #a8b3c2;
+      --accent: #7dd3fc;
+      --border: #243041;
+      --brand-gradient: linear-gradient(135deg, #60a5fa, #7dd3fc);
+    }
 
-    .about-wrapper {
+    * { box-sizing: border-box; }
+
+    body {
+      margin: 0;
+      background: var(--bg);
+      color: var(--text);
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      line-height: 1.6;
+    }
+
+    a { color: var(--accent); text-decoration: none; transition: opacity 0.2s; }
+    a:hover { opacity: 0.8; }
+
+    .container {
       max-width: 1100px;
       margin: 0 auto;
-      padding: 2rem 1.5rem 3rem;
+      padding: 0 20px;
     }
 
-    .about-hero-title {
-      margin-bottom: 0.5rem;
-    }
-
-    .about-subtitle {
-      margin: 0 0 2rem;
-      color: #555;
-      font-size: 1rem;
-    }
-
-    .about-layout {
+    /* --- Navigation --- */
+    header {
       display: flex;
-      flex-direction: column;
-      gap: 2rem;
+      align-items: center;
+      justify-content: space-between;
+      padding: 15px 40px;
+      border-bottom: 1px solid var(--border);
+      position: sticky;
+      top: 0;
+      background: rgba(11, 15, 20, 0.85);
+      backdrop-filter: blur(10px);
+      z-index: 1000;
     }
 
-    .about-photo {
-      flex: 0 0 260px;
-      max-width: 320px;
-      align-self: center;
+    .logo {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      font-weight: 800;
+      font-size: 1.2rem;
+      letter-spacing: -0.5px;
+      color: var(--text);
+    }
+
+    .logo img { height: 60px; width: auto; display: block; }
+
+    .logo-text {
+      background: var(--brand-gradient);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin-left: 2px;
+    }
+
+    .main-nav {
+      display: flex;
+      gap: 1.5rem;
+      align-items: center;
+    }
+
+    .nav-link {
+      font-weight: 500;
+      color: var(--text);
+      font-size: 0.95rem;
+    }
+
+    .cta-nav {
+      padding: 8px 18px;
+      border-radius: 8px;
+      background: var(--brand-gradient);
+      color: #06101a !important;
+      font-weight: 600;
+      font-size: 0.9rem;
+    }
+
+    /* --- About Layout --- */
+    .about-section {
+      padding: 80px 0;
+    }
+
+    .about-header {
+      text-align: center;
+      margin-bottom: 60px;
+    }
+
+    .about-header h1 {
+      font-size: clamp(32px, 5vw, 48px);
+      margin-bottom: 10px;
+    }
+
+    .about-header .subtitle {
+      color: var(--muted);
+      font-size: 1.2rem;
+    }
+
+    .about-grid {
+      display: grid;
+      grid-template-columns: 320px 1fr;
+      gap: 60px;
+      align-items: start;
     }
 
     .about-photo img {
       width: 100%;
       height: auto;
-      border-radius: 12px;
-      display: block;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.12);
+      border-radius: 20px;
+      border: 1px solid var(--border);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.3);
     }
 
     .about-content h2 {
-      margin-top: 2rem;
-      margin-bottom: 0.75rem;
+      font-size: 1.8rem;
+      margin: 40px 0 20px;
+      color: var(--accent);
     }
 
+    .about-content h2:first-child { margin-top: 0; }
+
     .about-content p {
-      margin-bottom: 1rem;
+      margin-bottom: 20px;
+      font-size: 1.1rem;
+      color: var(--text);
+      opacity: 0.9;
     }
 
     .about-content ul {
-      padding-left: 1.2rem;
-      margin-bottom: 1.25rem;
+      padding-left: 20px;
+      margin-bottom: 30px;
     }
 
     .about-content li {
-      margin-bottom: 0.4rem;
+      margin-bottom: 12px;
+      color: var(--muted);
     }
 
-    .accent {
-      color: #2457ff;
-      font-weight: 600;
+    .about-content strong {
+      color: var(--text);
     }
 
-    @media (min-width: 800px) {
-      .about-layout {
-        flex-direction: row;
-        align-items: flex-start;
-      }
-      .about-photo {
-        align-self: flex-start;
-      }
+    /* --- Call to Action --- */
+    .about-cta {
+      background: var(--surface);
+      border-top: 1px solid var(--border);
+      border-bottom: 1px solid var(--border);
+      padding: 80px 0;
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    .cta-button {
+      display: inline-block;
+      padding: 14px 28px;
+      border-radius: 10px;
+      background: var(--brand-gradient);
+      color: #06101a;
+      font-weight: 700;
+      margin-top: 20px;
+    }
+
+    footer { padding: 40px 20px; text-align: center; border-top: 1px solid var(--border); color: var(--muted); font-size: 0.9rem; }
+
+    @media (max-width: 900px) {
+      header { padding: 15px 20px; flex-direction: column; gap: 15px; }
+      .about-grid { grid-template-columns: 1fr; gap: 40px; }
+      .about-photo { max-width: 300px; margin: 0 auto; }
+      .about-section { padding: 40px 0; }
     }
   </style>
 </head>
 <body>
-<header>
+
+  <header>
     <a class="logo" href="index.html">
-      <img src="logo-bwow.png" alt="Better Ways of Working logo" />
+      <img src="logo-bwow.png" alt="Better Ways of Working" onerror="this.style.display='none'; this.nextElementSibling.style.display='block'">
+      <span style="display:none">Better <span class="logo-text">Ways of Working</span></span>
     </a>
-<nav class="main-nav">
-  <a href="index.html" class="nav-logo">Home</a>
-  <!--<a href="learn.html" class="nav-link">Learn</a>
-        <a href="grow.html" class="nav-link">Grow</a>-->
-  <a href="about.html" class="nav-link">About</a>
-        <!--<a href="events.html" class="nav-link">Events</a>-->
-  <a href="resources.html" class="nav-link">Insights</a>
-  <a href="https://courses.betterwaysofworking.com" class="cta-nav">Courses</a>
-</nav>
+    <nav class="main-nav">
+      <a href="index.html" class="nav-link">Home</a>
+      <a href="about.html" class="nav-link" style="color: var(--accent);">About</a>
+      <a href="https://bwow.substack.com/p/the-agile-team-flow-and-ai-readiness" class="nav-link">Free Blueprint</a>
+      <a href="resources.html" class="nav-link">Insights</a>
+      <a href="https://courses.betterwaysofworking.com" class="cta-nav">Courses</a>
+    </nav>
   </header>
 
-<main>
-  <section class="about-wrapper">
-    <h1 class="about-hero-title">About Me</h1>
-    <p class="about-subtitle">
-      I'm <span class="accent">Dave Borzillo</span>, founder of Better Ways of Working (BWOW).
-    </p>
+  <main>
+    <section class="about-section">
+      <div class="container">
+        <div class="about-header">
+          <h1>Meet the Founder</h1>
+          <p class="subtitle">I'm <strong>Dave Borzillo</strong>, helping you move from frustration to momentum.</p>
+        </div>
 
-    <div class="about-layout">
-      <aside class="about-photo">
-        <!-- Your headshot; make sure this file exists in the same folder -->
-        <img
-          src="BorzilloHeadshot.jpg"
-          alt="Portrait of Dave Borzillo, founder of Better Ways of Working"
-        />
-      </aside>
+        <div class="about-grid">
+          <aside class="about-photo">
+            <img src="BorzilloHeadshot.jpg" alt="Dave Borzillo" onerror="this.src='https://via.placeholder.com/320x400?text=Dave+Borzillo'">
+          </aside>
 
-      <section class="about-content">
-        <p>
-          Welcome! I'm Dave Borzillo, founder of Better Ways of Working (BWOW).
-          I help leaders, teams, and organizations discover practical, modern
-          approaches to collaboration, communication, and getting meaningful
-          work done.
-        </p>
+          <section class="about-content">
+            <p>
+              I help leaders, teams, and organizations discover practical, modern
+              approaches to collaboration, communication, and getting meaningful
+              work done.
+            </p>
 
-        <p>
-          For more than a decade, I’ve coached executives, guided complex
-          transformations, taught at the BU Agile Innovation Lab, and led teams
-          recognized as internal disruptors. I’ve done this work inside Fortune 500
-          companies, helping leaders and teams adopt better ways of working in some
-          of the most complex environments in industry. My work blends Agile, Lean,
-          facilitation, leadership development, and systems thinking into clear,
-          actionable methods that help people move from frustration to momentum.
-        </p>
+            <p>
+              For more than a decade, I’ve coached executives, guided complex
+              transformations, and led teams recognized as internal disruptors inside Fortune 500
+              companies. My work blends Agile, Lean, facilitation, leadership development, and systems thinking into clear,
+              actionable methods.
+            </p>
 
-        <h2>What I Do</h2>
-        <ul>
-          <li>Coach leaders and teams to collaborate more effectively</li>
-          <li>Teach frameworks like Liberating Structures, Visual Collaboration, and Scrum</li>
-          <li>Run cohort-based programs like the Better Career Cohort</li>
-          <li>Facilitate alignment, strategic clarity, and forward progress</li>
-          <li>
-            Write and speak about modern ways of working, including my book
-            <em>Who Killed Agile?</em>
-          </li>
-        </ul>
+            <h2>What I Do</h2>
+            <ul>
+              <li><strong>Coach</strong> leaders and teams to collaborate more effectively</li>
+              <li><strong>Teach</strong> frameworks like Liberating Structures and Scrum</li>
+              <li><strong>Run</strong> cohort-based programs like the Better Career Cohort</li>
+              <li><strong>Facilitate</strong> strategic alignment and forward progress</li>
+              <li><strong>Write</strong> about modern ways of working, including my book <em>Who Killed Agile?</em></li>
+            </ul>
 
-        <h2>My Mission</h2>
-        <p>
-          My mission is to help people who genuinely care about doing great work
-          unlock their potential by removing the unnecessary friction that holds
-          organizations back. I believe work should feel clearer, more connected,
-          and more human.
-        </p>
+            <h2>My Approach</h2>
+            <p>I focus on <strong>Practicality over theory</strong>—everything I teach works in real environments. I prioritize simplicity because clarity creates confidence, and I'm obsessed with <strong>Flow</strong>—reducing the delays and stalled decisions that burn people out.</p>
 
-        <h2>My Approach</h2>
-        <p>I focus on:</p>
-        <ul>
-          <li><strong>Practicality over theory</strong> — everything I teach works in real environments</li>
-          <li><strong>Simplicity</strong> — clarity creates confidence</li>
-          <li><strong>Psychological safety and openness</strong> — where real collaboration can happen</li>
-          <li><strong>Flow</strong> — reducing delays, confusion, and stalled decisions</li>
-          <li><strong>Empowering others</strong> — so progress continues long after I'm gone</li>
-        </ul>
+            <h2>Navigating the Future with AI</h2>
+            <p>
+              Artificial intelligence isn’t just a trend—it's a new layer of how
+              work gets done. I’ve worked on knowledge-based systems since the late 90s, and the goal remains the same:
+              capture expertise and make complex work easier.
+            </p>
+            <p>
+              Today, I help teams integrate AI into their day-to-day flow in practical ways that reduce friction and free people to focus on meaningful, human-centered work.
+            </p>
+          </section>
+        </div>
+      </div>
+    </section>
 
-        <h2>Navigating the Future with AI</h2>
-        <p>
-          Artificial intelligence isn’t just a trend—it's a new layer of how
-          work gets done. And for me, AI isn’t new. In the late 90s, I worked on
-          knowledge-based systems (an early form of AI that represented the state
-          of the art at the time) and helped implement those systems across several
-          aerospace companies. Even then, the goal was the same as it is now:
-          capture expertise, improve decision-making, and make complex work easier.
-        </p>
-        <p>
-          Today’s AI is exponentially more capable, and I believe leaders and
-          teams need to learn how to work <em>with</em> it, not fear it or ignore
-          it. Used well, AI can reduce friction, improve clarity, accelerate
-          decisions, and free people to focus on meaningful, human-centered work.
-          A big part of my mission now is helping people integrate AI into their
-          day-to-day flow in practical, trustworthy ways.
-        </p>
+    <section class="about-cta">
+      <div class="container">
+        <h2>Fix your team's friction</h2>
+        <p>Download the guide to fixing team flow and preparing for the AI era.</p>
+        <a href="https://bwow.substack.com/p/the-agile-team-flow-and-ai-readiness" class="cta-button">Get the Free Blueprint</a>
+      </div>
+    </section>
+  </main>
 
-        <h2>Why I Started Better Ways of Working</h2>
-        <p>
-          After years inside organizations where people were overwhelmed by
-          frameworks, meetings, and misalignment, I built BWOW to give leaders
-          and teams something better: practical tools, powerful facilitation
-          methods, and a community that feels energizing instead of exhausting.
-        </p>
-
-        <h2>A Bit of My Story</h2>
-        <p>
-          My career began in environments where smart people struggled not because
-          they lacked skill, but because their ways of working held them back. I
-          became obsessed with solving that—first with tools and systems, and now
-          by improving how people work together. Now, through coaching, training,
-          writing, and programs, I help others remove that friction and unlock the
-          impact they’re capable of.
-        </p>
-
-        <p>
-          If you're someone who cares about doing great work and wants to discover
-          better ways to lead, collaborate, and innovate—you’re in the right place.
-        </p>
-
-        <h2>BWOW Is Bigger Than Me</h2>
-        <p>
-          Better Ways of Working isn’t just my perspective—it’s a growing
-          network of like-minded coaches, facilitators, and practitioners who
-          bring their own expertise and lived experience. I actively partner
-          with other leaders who specialize in areas like organizational design,
-          leadership development, disruption strategy, and team dynamics.
-          Together, we create richer programs, stronger support systems, and more
-          impactful learning experiences for the people we serve.
-        </p>
-
-        <p>
-          If you’re someone who cares about doing meaningful work, wants to
-          improve how you and your teams collaborate, and believes there
-          <em>has</em> to be a better way—you’re in the right place.
-        </p>
-      </section>
+  <footer>
+    <div class="container">
+      <p>&copy; 2026 Better Ways of Working. All rights reserved. <a href="https://bwow.substack.com" style="margin-left: 10px;">Substack</a></p>
     </div>
-  </section>
-</main>
+  </footer>
 
-<footer>
-  <p>© <span id="year"></span> Better Ways of Working · <a href="https://bwow.substack.com">Substack</a></p>
-</footer>
-
-<script>
-  document.getElementById('year').textContent = new Date().getFullYear();
-</script>
 </body>
 </html>
