--- a/about.html
+++ b/about.html
@@ -233,7 +233,7 @@
               <li><strong>Teach</strong> frameworks like Liberating Structures and Scrum</li>
               <li><strong>Run</strong> cohort-based programs like the Better Career Cohort</li>
               <li><strong>Facilitate</strong> strategic alignment and forward progress</li>
-              <li><strong>Write</strong> about modern ways of working, including my book <em>Who Killed Agile?</em></li>
+              <li><strong>Write</strong> about modern ways of working, including my book <a href="https://a.co/d/8o94Q32" target="_blank" rel="noopener"><em>Who Killed Agile?</em></a></li>
             </ul>
 
             <h2>My Approach</h2>
