--- a/about.html
+++ b/about.html
@@ -229,10 +229,10 @@
 
             <h2>What I Do</h2>
             <ul>
-              <li><strong>Coach</strong> leaders and teams to collaborate more effectively</li>
+              <li><strong>Advise</strong> leaders and teams to collaborate more effectively</li>
               <li><strong>Teach</strong> frameworks like Liberating Structures and Scrum</li>
               <li><strong>Run</strong> cohort-based programs like the Better Career Cohort</li>
-              <li><strong>Facilitate</strong> strategic alignment and forward progress</li>
+              <li><strong>Guide</strong> strategic alignment and forward progress</li>
               <li><strong>Write</strong> about modern ways of working, including my book <a href="https://a.co/d/8o94Q32" target="_blank" rel="noopener"><em>Who Killed Agile?</em></a></li>
             </ul>
 
