--- a/index.html
+++ b/index.html
@@ -210,13 +210,15 @@
 
   <header>
     <a class="logo" href="index.html">
-      <img src="logo-bwow.png" alt="Better Ways of Working" onerror="this.style.display='none'; this.nextElementSibling.style.display='block'">
-      <span style="display:none">Better <span class="logo-text">Ways of Working</span></span>
+      <!-- Placeholder logo since external asset path may vary -->
+      <div style="height: 40px; width: 40px; background: var(--brand-gradient); border-radius: 8px; margin-right: 10px;"></div>
+      <span>Better <span class="logo-text">Ways of Working</span></span>
     </a>
     <nav class="main-nav">
       <a href="index.html" class="nav-link">Home</a>
       <a href="about.html" class="nav-link">About</a>
-      <a href="https://bwow.substack.com/p/the-agile-team-flow-and-ai-readiness" class="nav-link">Free Blueprint</a>
+      <!-- Updated Podia Link -->
+      <a href="https://courses.betterwaysofworking.com/agile-team-flow-ai-readiness-blueprint" class="nav-link">Free Blueprint</a>
       <a href="resources.html" class="nav-link">Insights</a>
       <a href="https://courses.betterwaysofworking.com" class="cta-nav">Courses</a>
     </nav>
@@ -230,7 +232,8 @@
       </p>
       <div class="hero-ctas">
         <a href="https://courses.betterwaysofworking.com" class="cta-large">Explore the Courses</a>
-        <a href="https://bwow.substack.com/p/the-agile-team-flow-and-ai-readiness" class="cta-secondary">Get the Free Blueprint</a>
+        <!-- Updated Podia Link -->
+        <a href="https://courses.betterwaysofworking.com/agile-team-flow-ai-readiness-blueprint" class="cta-secondary">Get the Free Blueprint</a>
       </div>
     </div>
   </section>
@@ -249,7 +252,8 @@
           <span class="blueprint-tag">Free Resource</span>
           <h2>The Agile Team Flow & AI Readiness Blueprint</h2>
           <p>Download our practitioner-led guide to fixing team friction and preparing your delivery workflows for the AI era.</p>
-          <a href="https://bwow.substack.com/p/the-agile-team-flow-and-ai-readiness" class="cta-button">Download the Blueprint</a>
+          <!-- Updated Podia Link -->
+          <a href="https://courses.betterwaysofworking.com/agile-team-flow-ai-readiness-blueprint" class="cta-button">Download the Blueprint</a>
         </div>
       </div>
     </div>
