--- a/resources.html
+++ b/resources.html
@@ -215,7 +215,7 @@
     <nav class="main-nav">
       <a href="index.html" class="nav-link">Home</a>
       <a href="about.html" class="nav-link">About</a>
-      <a href="https://bwow.substack.com/p/the-agile-team-flow-and-ai-readiness" class="nav-link">Free Blueprint</a>
+      <a href="https://courses.betterwaysofworking.com/agile-team-flow-ai-readiness-blueprint" class="nav-link">Free Blueprint</a>
       <a href="resources.html" class="nav-link" style="color: var(--accent);">Insights</a>
       <a href="https://courses.betterwaysofworking.com" class="cta-nav">Courses</a>
     </nav>
@@ -269,14 +269,14 @@
       <div class="container">
         <h2>Fix your team's friction</h2>
         <p>Download the guide to fixing team flow and preparing for the AI era.</p>
-        <a href="https://bwow.substack.com/p/the-agile-team-flow-and-ai-readiness" class="cta-button">Get the Free Blueprint</a>
+        <a href="https://courses.betterwaysofworking.com/agile-team-flow-ai-readiness-blueprint" class="cta-button">Get the Free Blueprint</a>
       </div>
     </section>
   </main>
 
   <footer>
     <div class="container">
-      <p>&copy; 2026 Better Ways of Working. All rights reserved. <a href="https://bwow.substack.com" style="margin-left: 10px;">Substack</a></p>
+      <p>&copy; 2026 Better Ways of Working. All rights reserved. <a href="https://betterwaysofworking.com" style="margin-left: 10px;">Substack</a></p>
     </div>
   </footer>
 
