--- a/about.html
+++ b/about.html
@@ -194,7 +194,7 @@
     <nav class="main-nav">
       <a href="index.html" class="nav-link">Home</a>
       <a href="about.html" class="nav-link" style="color: var(--accent);">About</a>
-      <a href="https://bwow.substack.com/p/the-agile-team-flow-and-ai-readiness" class="nav-link">Free Blueprint</a>
+      <a href="https://courses.betterwaysofworking.com/agile-team-flow-ai-readiness-blueprint" class="nav-link">Free Blueprint</a>
       <a href="resources.html" class="nav-link">Insights</a>
       <a href="https://courses.betterwaysofworking.com" class="cta-nav">Courses</a>
     </nav>
@@ -264,7 +264,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2026 Better Ways of Working. All rights reserved. <a href="https://bwow.substack.com" style="margin-left: 10px;">Substack</a></p>
+      <p>&copy; 2026 Better Ways of Working. All rights reserved. <a href="https://betterwaysofworking.com" style="margin-left: 10px;">Substack</a></p>
     </div>
   </footer>
 
