--- a/about.html
+++ b/about.html
@@ -257,14 +257,14 @@
       <div class="container">
         <h2>Fix your team's friction</h2>
         <p>Download the guide to fixing team flow and preparing for the AI era.</p>
-        <a href="https://bwow.substack.com/p/the-agile-team-flow-and-ai-readiness" class="cta-button">Get the Free Blueprint</a>
+        <a href="https://courses.betterwaysofworking.com/agile-team-flow-ai-readiness-blueprint" class="cta-button">Get the Free Blueprint</a>
       </div>
     </section>
   </main>
 
   <footer>
     <div class="container">
-      <p>&copy; 2026 Better Ways of Working. All rights reserved. <a href="https://betterwaysofworking.com" style="margin-left: 10px;">Substack</a></p>
+      <p>&copy; 2026 Better Ways of Working. All rights reserved. </p>
     </div>
   </footer>
 
