--- a/resources.html
+++ b/resources.html
@@ -276,7 +276,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2026 Better Ways of Working. All rights reserved. <a href="https://betterwaysofworking.com" style="margin-left: 10px;">Substack</a></p>
+      <p>&copy; 2026 Better Ways of Working. All rights reserved. </p>
     </div>
   </footer>
 
